--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 				padding:28px; line-height:1.9; font-size:var(--base-font-size); min-height:320px;
 			}
 			.font-btn{background:transparent;border:1px solid rgba(15,23,42,0.06);padding:6px 8px;border-radius:6px;cursor:pointer;color:var(--accent)}
+			/* 그룹으로 만든 글자 크기 컨트롤: 행으로 배치됩니다 */
+			.font-controls{display:flex; gap:8px; align-items:center}
 			article.chapter{display:none}
 			article.chapter.active{display:block}
 			.page-controls{display:flex; gap:8px; align-items:center}
@@ -95,30 +97,22 @@
 					<nav class="toc" aria-label="목차">
 						<div class="toc-list" id="tocList">
 							<!-- Restore cover tab -->
-							<a href="#cover" data-target="cover">[주님이 가르쳐 주신 기도 순서]</a>
-							<a href="#favorites" data-target="favorites" class="active">즐겨찾기</a>
+							<a href="#cover" data-target="cover" class="active">[주님이 가르쳐 주신 기도 순서]</a>
 							<a href="#toc" data-target="toc">목차</a>
+							<a href="#favorites" data-target="favorites">즐겨찾기</a>
+						<div class="font-controls" aria-label="글자 크기 조절">
+							<button id="fontDec" class="font-btn" title="글자 작게">A-</button>
+							<button id="fontReset" class="font-btn" title="기본 글자">A</button>
+							<button id="fontInc" class="font-btn" title="글자 크게">A+</button>
+						</div>
 							<!-- numeric TOC removed from top navigation so only the '목차' tab shows the full table of contents -->
 						</div>
-				<div class="page-controls">
-					<!-- font controls -->
-					<button id="fontDec" class="font-btn" title="글자 작게">A-</button>
-					<button id="fontReset" class="font-btn" title="기본 글자">A</button>
-					<button id="fontInc" class="font-btn" title="글자 크게">A+</button>
-				</div>
 			</nav>
 
 			<main class="content" id="content" tabindex="0">
-						<article id="favorites" class="chapter active" aria-labelledby="favorites-title">
-							<h2 id="favorites-title">즐겨찾기</h2>
-							<p>즐겨찾기한 챕터는 이 탭에서 확인할 수 있습니다. 별(☆) 버튼을 눌러 즐겨찾기를 추가하거나 제거하세요.</p>
-							<ul id="favoritesList" class="favorites-list">
-								<!-- Filled dynamically -->
-							</ul>
-						</article>
 
-						<article id="cover" class="chapter" aria-labelledby="cover-title">
-							<h2 id="cover-title">[주님이 가르쳐 주신 기도 순서]지</h2>
+						<article id="cover" class="chapter active" aria-labelledby="cover-title">
+							<h2 id="cover-title">[주님이 가르쳐 주신 기도 순서]</h2>
 							<p>(1) 하나님 이름이 거룩<br>
 							(2) 하나님 나라<br>
 							(3) 하나님의 뜻<br>
@@ -179,6 +173,14 @@
 								<li><button class="star-btn" data-target-id="chapter-34" aria-pressed="false" title="즐겨찾기">☆</button> <a href="chapter-34.html"><영적인 힘을 얻기 위한 기도></a></li>
 								<li><button class="star-btn" data-target-id="chapter-35" aria-pressed="false" title="즐겨찾기">☆</button> <a href="chapter-35.html"><성령 충만 기도문></a></li>
 							</ol>
+						</article>
+
+						<article id="favorites" class="chapter" aria-labelledby="favorites-title">
+							<h2 id="favorites-title">즐겨찾기</h2>
+							<p>즐겨찾기한 챕터는 이 탭에서 확인할 수 있습니다. 별(☆) 버튼을 눌러 즐겨찾기를 추가하거나 제거하세요.</p>
+							<ul id="favoritesList" class="favorites-list">
+								<!-- Filled dynamically -->
+							</ul>
 						</article>
 
 				<!-- Chapters are now separate pages (chapter-1.html ... chapter-35.html). -->
